# ministudo-guibuilder

./: .cproject  .project  CMakeLists.txt  ChangeLog  Makefile.am  README.md  build_version.c  build_version.h  cmake_gbconfig.h.in  configure.ac  configure.in  dump-skin-rdr.c  eclipse-install.sh  func-win.cpp  func-win.h  guibuilder  guibuilder.sln  guibuilder.vcproj  main.cpp  rebuild-version
etc/: Makefile.am  MiniGUI.cfg  cmake_guibuilder.cfg.in  cmake_lang.cfg.in  guibuilder.cfg.sh  imgeditor.layout  lang.cfg.sh  language.cfg  mainframe.cfg  rdreditor.layout  resid.layout  texteditor.layout  uieditor.layout
etc/Emulator/: Makefile.am  MiniGUI.cfg  pda.skin
etc/icon/: Makefile.am
etc/icon/uieditor/: Makefile.am
etc/imgeditor/: Makefile  Makefile.am  Makefile.in
etc/lang/: Makefile.am  zh.mo
etc/msd/: .rename.swp  Makefile.am
etc/renderer/: Makefile.am  rdrlist
etc/renderer/classic/: Makefile.am  abstractlist.xml  animate.xml  button.xml  buttongroup.xml  checkbutton.xml  colorbutton.xml  combo.xml  component.xml  container.xml  dialog.xml  edit.xml  groupbox.xml  hprogressbar.xml  hscrollbar.xml  hseparator.xml  hspinner.xml  htrackbar.xml  iconview.xml  image.xml  imwordsel.xml  itemview.xml  ledlabel.xml  list.xml  listbox.xml  listview.xml  mainwnd.xml  menubutton.xml  mledit.xml  monthcalendar.xml  page.xml  panel.xml  progressbar.xml  propsheet.xml  radiobutton.xml  rect.xml  scrollbar.xml  scrollview.xml  scrollwidget.xml  separator.xml  (+14 more)
etc/renderer/fashion/: Makefile.am  abstractlist.xml  animate.xml  button.xml  buttongroup.xml  checkbutton.xml  colorbutton.xml  combo.xml  component.xml  container.xml  dialog.xml  edit.xml  groupbox.xml  hprogressbar.xml  hscrollbar.xml  hseparator.xml  hspinner.xml  htrackbar.xml  iconview.xml  image.xml  imwordsel.xml  itemview.xml  ledlabel.xml  list.xml  listbox.xml  listview.xml  mainwnd.xml  menubutton.xml  mledit.xml  monthcalendar.xml  page.xml  panel.xml  progressbar.xml  propsheet.xml  radiobutton.xml  rect.xml  scrollbar.xml  scrollview.xml  scrollwidget.xml  separator.xml  (+14 more)
etc/renderer/flat/: Makefile.am  abstractlist.xml  animate.xml  button.xml  buttongroup.xml  checkbutton.xml  colorbutton.xml  combo.xml  component.xml  container.xml  dialog.xml  edit.xml  groupbox.xml  hprogressbar.xml  hscrollbar.xml  hseparator.xml  hspinner.xml  htrackbar.xml  iconview.xml  image.xml  imwordsel.xml  itemview.xml  ledlabel.xml  list.xml  listbox.xml  listview.xml  mainwnd.xml  menubutton.xml  mledit.xml  monthcalendar.xml  page.xml  panel.xml  progressbar.xml  propsheet.xml  radiobutton.xml  rect.xml  scrollbar.xml  scrollview.xml  scrollwidget.xml  separator.xml  (+14 more)
etc/renderer/skin/: Makefile.am  abstractlist.xml  animate.xml  button.xml  buttongroup.xml  checkbutton.xml  colorbutton.xml  combo.xml  component.xml  container.xml  dialog.xml  edit.xml  groupbox.xml  hprogressbar.xml  hscrollbar.xml  hseparator.xml  hspinner.xml  htrackbar.xml  iconview.xml  image.xml  imwordsel.xml  itemview.xml  ledlabel.xml  list.xml  listbox.xml  listview.xml  mainwnd.xml  menubutton.xml  mledit.xml  monthcalendar.xml  page.xml  panel.xml  progressbar.xml  propsheet.xml  radiobutton.xml  rect.xml  scrollbar.xml  scrollview.xml  scrollwidget.xml  separator.xml  (+14 more)
etc/uieditor/: Makefile.am  compund-type.def  control.cfg  ctrllist  mobile.cfg
etc/uieditor/defines/: Makefile.am  abstractlist.xml  aminate.xml  button.xml  buttongroup.xml  checkbutton.xml  colorbutton.xml  combo.xml  component.xml  container.xml  dialog.xml  edit.xml  groupbox.xml  hprogressbar.xml  hscrollbar.xml  hseparator.xml  (+39 more)
etc/user-templates/: Makefile.am  file_select.tmpl  phone_app.tmpl
imgeditor/: CMakeLists.txt  Makefile.am  dirimgview.cpp  dirimgview.h  dirtreepanel.cpp  dirtreepanel.h  imageview.cpp  imageview.h  img-event-id.h  imgeditor.cpp  imgeditor.h  imgres-listpanel.cpp  imgres-listpanel.h  resdescpanel.cpp  resdescpanel.h  resimgview.cpp  resimgview.h
include/: CMakeLists.txt  Makefile.am  class-instance.h  clipboard.h  codecombin.h  defundo-redo-observer.h  dlgtmpls.h  editable-listview.h  guibuilder.h  log.h  luahlp.h  mapex.h  mgfcheads.h  mgheads.h  msd_intl.h  panel.h  panellayout.h  psense4.h  qvfb.h  refpointer.h  reseditor.h  resenv.h  sense4.h  socket-client.h  stream.h  undo-redo.h  valuetype.h  xmlheads.h  xmlhelp.h
mainframe/: CMakeLists.txt  Makefile.am  customial.c  dlgtmpls.c  extendidrange.cpp  extendidrange.h  idrange-editor.cpp  idrange-editor.h  mainframe.cpp  mainframe.h  menu-manager.cpp  menu-manager.h  newidrange.cpp  newidrange.h  scancode-table  select-project-type-dlg.cpp  select-project-type-dlg.h
rdreditor/: CMakeLists.txt  Makefile.am  rdr-dialog.cpp  rdr-dialog.h  rdr-event-id.h  rdr-instance.cpp  rdr-instance.h  rdr-preview-panel.cpp  rdr-preview-panel.h  rdreditor.cpp  rdreditor.h  rdrtreepanel.cpp  rdrtreepanel.h
texteditor/: CMakeLists.txt  GTranslater.cpp  GTranslater.h  Makefile.am  text-dlg.cpp  text-dlg.h  texteditor.cpp  texteditor.h  textlistpanel.cpp  textlistpanel.h  translater.cpp  translater.h
texteditor/json/: CMakeLists.txt  Makefile.am  arraylist.c  arraylist.h  bits.h  config.h  debug.c  debug.h  json.h  json_object.c  json_object.h  json_object_private.h  json_tokener.c  json_tokener.h  json_util.c  json_util.h  linkhash.c  linkhash.h  printbuf.c  printbuf.h
tools/ncs2ics/: Makefile.am  main.cpp  trans.cpp  trans.h  trans.list
uieditor/: CMakeLists.txt  Makefile.am  component-instance.cpp  component-instance.h  connect-events-wnd.cpp  connect-events-wnd.h  edituipanel.cpp  edituipanel.h  eventpanel.cpp  eventpanel.h  fieldpanel.cpp  fieldpanel.h  font-dialog.cpp  font-dialog.h  invisible-component.cpp  invisible-component.h  navigator-panel.cpp  navigator-panel.h  page-window-instance.cpp  page-window-instance.h  proppanel.cpp  proppanel.h  rdrpanel.cpp  rdrpanel.h  screen_setting_templ  select-template.cpp  select-template.h  structpanel.cpp  structpanel.h  toolbox-panel.cpp  toolbox-panel.h  ui-event-id.h  uiconfig.h  uieditor.cpp  uieditor.h  window-instance.cpp  window-instance.h
(+341 files in other folders)
