

AM_CPPFLAGS = -I . -I ../include

noinst_LIBRARIES = libimgeditor.a

libimgeditor_a_SOURCES= dirimgview.cpp \
	dirtreepanel.cpp \
	imageview.cpp \
	imgeditor.cpp \
	imgres-listpanel.cpp \
	resdescpanel.cpp \
	resimgview.cpp \
	dirimgview.h \
	dirtreepanel.h \
	imageview.h \
	imgeditor.h \
	img-event-id.h \
	imgres-listpanel.h \
	resdescpanel.h \
	resimgview.h

