
noinst_HEADERS= \
	class-instance.h \
	clipboard.h \
	codecombin.h \
	defundo-redo-observer.h \
	editable-listview.h \
	log.h \
	luahlp.h \
	mapex.h \
	mgfcheads.h \
	mgheads.h \
	panel.h \
	panellayout.h \
	refpointer.h \
	reseditor.h \
	resenv.h \
	socket-client.h \
	stream.h \
	undo-redo.h \
	valuetype.h \
	xmlheads.h \
	xmlhelp.h \
	sense4.h \
	psense4.h \
	msd_intl.h
