
AM_CPPFLAGS = -I . -I ../include

noinst_LIBRARIES=libmainframe.a

libmainframe_a_SOURCES= mainframe.cpp \
	menu-manager.cpp \
	select-project-type-dlg.cpp  \
	mainframe.h \
	menu-manager.h \
	select-project-type-dlg.h \
	customial.c  \
	idrange-editor.h idrange-editor.cpp \
	newidrange.h newidrange.cpp \
	extendidrange.h extendidrange.cpp

