	
AM_CPPFLAGS = -I . -I ../include

noinst_LIBRARIES=librdreditor.a

librdreditor_a_SOURCES= rdr-dialog.cpp \
	rdreditor.cpp \
	rdr-instance.cpp \
	rdr-preview-panel.cpp \
	rdrtreepanel.cpp \
	rdr-dialog.h \
	rdreditor.h \
	rdr-event-id.h \
	rdr-instance.h \
	rdr-preview-panel.h \
	rdrtreepanel.h 

