INCLUDES = -I . -I ../include

SUBDIRS=json

noinst_LIBRARIES = libtexteditor.a

libtexteditor_a_SOURCES= GTranslater.cpp \
	text-dlg.cpp \
	texteditor.cpp \
	textlistpanel.cpp \
	translater.cpp \
	GTranslater.h \
	text-dlg.h \
	texteditor.h \
	textlistpanel.h \
	translater.h

libtexteditor_a_LIBADD=json/libjson.a

