
INCLUDES = -I . -I ../include

noinst_LIBRARIES=libuieditor.a

libuieditor_a_SOURCES= component-instance.cpp \
	connect-events-wnd.cpp \
	edituipanel.cpp \
	eventpanel.cpp \
	fieldpanel.cpp \
	invisible-component.cpp \
	navigator-panel.cpp \
	page-window-instance.cpp \
	proppanel.cpp \
	rdrpanel.cpp \
	select-template.cpp \
	structpanel.cpp \
	toolbox-panel.cpp \
	uieditor.cpp \
	window-instance.cpp \
	component-instance.h \
	connect-events-wnd.h \
	edituipanel.h \
	eventpanel.h \
	fieldpanel.h \
	invisible-component.h \
	navigator-panel.h \
	page-window-instance.h \
	proppanel.h \
	rdrpanel.h \
	select-template.h \
	structpanel.h \
	toolbox-panel.h \
	uiconfig.h \
	uieditor.h \
	ui-event-id.h \
	window-instance.h \
	font-dialog.cpp \
	font-dialog.h

